Fix fg-bg contrast

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,7 +48,7 @@ main .swiper-container {
     min-height: 450px;
 
     &.hero[style] .hero-body {
-      background-color: rgba(255, 255, 255, 0.7);
+      background-color: rgba(255, 255, 255, 0.85);
     }
   }
 }
